--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Be My Valentine 💖</title>
+  <title>Valentine 💖</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 />
@@ -12,19 +12,31 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 <body>
-
-  <div class="card animate__animated animate__zoomIn">
+<div class="preloader">
+  <div>
+    <button id="btnSong" onclick="start()">Click to Start...</button>
+  </div>
+<div id="text"></div>
+</div>
+  <div class="card animate__animated">
+    <audio id="song" src="audio/khat.mp3" autoplay></audio>
+    </button>
     <h1><span class="heart-beat">❤️</span> Laraib <span class="heart-beat">❤️</span><br>Will you be my Valentine?</h1>
     <p>You’re my favorite part of every day...</p>
 
     <div class="buttons">
-      <button id="yesBtn">Yes!</button>
-      <button id="noBtn">No</button>
+      <button id="yesBtn">Yes! 💖</button>
+      <button id="noBtn">No! 💔</button>
     </div>
 
     <div class="message" id="message">
       💖 Yay! I knew it! 💖
+      <div class="gif-wrapper">
+    <img src="images/happy.gif" alt="Happy" class="left">
+    <img src="images/happy.gif" alt="Happy" class="right">
     </div>
+  </div>
+  <video class="vid" src="audio/vid.mp4" muted></video>
   </div>
   
 <script src="script.js"></script>
