--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 <body>
+  <img class="bigheart animate__animated" src="images/icon.png" alt="">
 <div class="preloader">
   <div>
     <button id="btnSong" onclick="start()">Click to Start...</button>
@@ -22,15 +23,15 @@
   <div class="card animate__animated">
     <audio id="song" src="audio/khat.mp3" autoplay></audio>
     </button>
-    <h1><span class="heart-beat">❤️</span> Laraib <span class="heart-beat">❤️</span><br>Will you be my Valentine?</h1>
-    <p>You’re my favorite part of every day...</p>
+    <h1 class="name"><span class="heart-beat">❤️</span> Laraib <span class="heart-beat">❤️</span><br>Will you be my Valentine?</h1>
+    <p class="para">You’re my favorite part of every day...</p>
 
     <div class="buttons">
       <button id="yesBtn">Yes! 💖</button>
       <button id="noBtn">No! 💔</button>
     </div>
 
-    <div class="message" id="message">
+    <div class="message animate__animated" id="message">
       💖 Yay! I knew it! 💖
       <div class="gif-wrapper">
     <img src="images/happy.gif" alt="Happy" class="left">
