--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="card animate__animated">
     <audio id="song" src="audio/khat.mp3" autoplay></audio>
     </button>
-    <h1 class="name"><span class="heart-beat">❤️</span> Laraib <span class="heart-beat">❤️</span><br>Will you be my Valentine?</h1>
+    <h1 class="name"><span class="heart-beat">❤️</span> Laraib <span class="heart-beat">❤️</span><br>Will you be my Forever?</h1>
     <p class="para">You’re my favorite part of every day...</p>
 
     <div class="buttons">
